<resources>
    <string name="app_name">Lonifeno</string>
    <string name="start">Начать изучение</string>
    <string name="logo_desc">Логотип</string>
    <string name="points_icon_desc">Заработанные очки</string>
    <string name="search_hint">Поиск по словам</string>
    <string name="dictionary_desc">Словарь</string>
    <string name="home_desc">Главная</string>
    <string name="account_desc">Аккаунт</string>
    <string name="level1">Введение</string>
    <string name="level2">Основные фразы</string>
    <string name="level3">Числа и счет</string>
    <string name="level4">Еда</string>
    <string name="level5">Семья</string>
    <string name="lesson1">Урок 1</string>
    <string name="lesson2">Урок 2</string>
    <string name="test">Тест</string>
    <string name="intro">Введение</string>
    <string name="level_image_desc1">Изображение для введения</string>
    <string name="lesson1Title">Произношение и орфография</string>
    <string name="back_button_desc">Назад</string>
    <string name="wolf_image_desc">Изображение волка</string>
    <string name="alphabet_description">Итальянский алфавит состоит из 21 буквы. Каждая буква имеет свое название, а именно:</string>
    <string name="vowel_consonant_description">Следовательно, в итальянском алфавите 5 букв, обозначающих гласные звуки (a, e, i, o, u) и 16 букв, обозначающих согласные звуки (b, c, d, f, g, h, l, m, n, p, q, r, s, t, v, z).</string>
    <string name="lesson2Title">Первые фразы на итальянском</string>
    <string name="descriotionlesson2">В этом уроке будут изучаться основные слова и фразы, которые часто используются в повседневной жизни.</string>
    <string name="buttonLesson2">Перейти к словам</string>
    <string name="nextWord">Следующее слово</string>
    <string name="word1">Ciao</string>
    <string name="word1Translate">Привет</string>
    <string name="word1Description">Используйте это слово, когда встречаете кого-то или начинаете разговор. Это неформальное приветствие, которое подходит для друзей и знакомых.</string>
    <string name="word1Transcription">[chow]</string>
    <string name="word2">Grazie</string>
    <string name="word2Translate">Спасибо</string>
    <string name="word2Description">Выражает благодарность. Часто используется в повседневной жизни, когда кто-то делает что-то приятное.</string>
    <string name="word2Transcription">[graht-see-eh]</string>
    <string name="let1">A</string>
    <string name="let2">B</string>
    <string name="let3">C</string>
    <string name="let4">D</string>
    <string name="let5">E</string>
    <string name="let6">F</string>
    <string name="let1Transcription">[a]</string>
    <string name="let2Transcription">[bi]</string>
    <string name="let3Transcription">[tchi]</string>
    <string name="let4Transcription">[di]</string>
    <string name="let5Transcription">[e]</string>
    <string name="let6Transcription">[effe]</string>
</resources>