<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativ_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:padding="0dp">

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header_container"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/yellow"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="true"
                android:contentDescription="@string/back_button_desc"
                android:src="@drawable/back" />

            <ImageView
                android:layout_width="543dp"
                android:layout_height="64dp"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/wolf_image_desc"
                android:src="@drawable/woolf2" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/module_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_background">

            <TextView
                android:id="@+id/italian_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word2"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/transcription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word2Transcription"
                android:textColor="@color/gray"
                android:textSize="18sp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/russian_translation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word2Translate"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/usage_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word2Description"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/go_to_word2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/green"
            android:text="@string/nextWord"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/navigation_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/yellow"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/dictionary_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/dictionary_desc"
            android:src="@drawable/vocabulation" />

        <ImageButton
            android:id="@+id/home_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:contentDescription="@string/home_desc"
            android:src="@drawable/home" />

        <ImageButton
            android:id="@+id/account_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/account_desc"
            android:src="@drawable/account" />
    </LinearLayout>
</LinearLayout>
    </RelativeLayout>
