<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativ_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:padding="0dp">

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header_container"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/yellow"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/back_button_desc"
                android:src="@drawable/back"
                android:clickable="true"/>

            <ImageView
                android:layout_width="543dp"
                android:layout_height="64dp"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/wolf_image_desc"
                android:src="@drawable/woolf2" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/module_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_gray"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Название урока -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:gravity="center"
                    android:text="@string/lesson1Title"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="347dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/alphabet_description"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="220dp"
                    app:srcCompat="@drawable/alfabet" />

                <TextView
                    android:layout_width="351dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/vowel_consonant_description"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/navigation_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/yellow"
            android:padding="10dp"
            android:gravity="center"
            android:layout_alignParentBottom="true">

            <ImageButton
                android:id="@+id/dictionary_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/dictionary_desc"
                android:src="@drawable/vocabulation" />

            <ImageButton
                android:id="@+id/home_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/home_desc"
                android:src="@drawable/home"
                android:clickable="true"/>

            <ImageButton
                android:id="@+id/account_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/account_desc"
                android:src="@drawable/account" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
