<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativ_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:padding="0dp">

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header_container"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/yellow"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="true"
                android:contentDescription="@string/back_button_desc"
                android:src="@drawable/back" />

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="end"
                android:layout_marginStart="280dp"
                android:contentDescription="@string/wolf_image_desc"
                android:src="@drawable/woolf3" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/test_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/progress_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/point1"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point2"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point3"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point4"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point5"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point6"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point7"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point8"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point9"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point10"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point11"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point12"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point13"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point14"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
                <TextView
                    android:id="@+id/point15"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/question_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/text_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Text Question"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tasks_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_left"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_marginRight="5dp"
                    android:scaleType="centerCrop"
                    android:background="@drawable/style_img_universal"
                    android:layout_weight="1"
                    android:src="@drawable/imgtest" />

                <ImageView
                    android:id="@+id/img_right"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_marginRight="5dp"
                    android:scaleType="centerCrop"
                    android:background="@drawable/style_img_universal"
                    android:layout_weight="1"
                    android:src="@drawable/imgtest" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/answer_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/text_left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Text Left"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/text_right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Text Right"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="center" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/navigation_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/yellow"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/dictionary_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/dictionary_desc"
                android:src="@drawable/vocabulation" />

            <ImageButton
                android:id="@+id/home_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:clickable="true"
                android:contentDescription="@string/home_desc"
                android:src="@drawable/home" />

            <ImageButton
                android:id="@+id/account_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/account_desc"
                android:src="@drawable/account" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
